
Special-Features:
- Navigation-Bean: Wird bei der Navigation gebraucht, um sich eine History der Seiten zu merken und bei einem Back auf die richtige Seite zu kommen.
- Das aktive Menuitem wird visuell hervorgehoben.
- Der User kann die Sprache des Bookstores selbst auswählen. Default-mässig wird das Locale des User-Agents benutzt. Der User kann aber die Sprache selbst wechseln, indem er auf das Sprachen-Flag klickt. Man sollte dies bei einem produktiven Bookstore auch im Profil hinterlegen können.
- Im Warenkorb kann man erneut auf die Details eines Buches gelangen. Der 'Zurück' Link geht anschliessend auf die korrekte Seite. Dies ist mit einem 'NavigationBean', welcher eine History der besuchten Seiten führt.
- Preise rechtsbündig
- Einkaufswagen nur klickbar, wenn etwas im Einkaufswagen ist.
- Logout, ohne die Session zu killen. Grund: Damit wir die vom User ausgewählte Sprache und den Warenkorb nicht verlieren.
- Länderliste-Dropdown in 2 Sprachen und beide sortiert.
- Defaultmässig ist das Land des Browsers im Dropdown ausgewählt.
- Taglib Version 2.1
- Custom Tag ValidateCreditCardNumber
- Composite Component (requiredField.xhtml) für required fields mit Label und Input/Secret Field mit diversen Attributen (Seite register und customerDetails)
- Creditcard: Kontrolle, ob das Datum in der Zukunft liegt. Abgelaufene Karten werden nicht akzeptiert.
- Ajax-Call bei Warenkorb->Anzahl. Blur anstelle von keyup benutzt, damit der Focus im Feld bleibt und eine 2-stellige Zahl eingegeben werden kann. render="@all" anstelle von @form, damit auch die globale Fehlermeldung neu gerendert wird, falls ein nicht valider Wert eingegeben wird.
- Project-Stage im web.xml von Development auf Production umgestellt
- Neue Namespaces (xmlns.jcp.org anstelle von java.sun.com) benutzt, wo möglich.
- Globale Error-Page für unerwartete Fehler (unterdrückung des Stacktraces)
- Benutzen des Attributes "validatorMessage" sowie Überschreiben von Default-Messages verwendet.