@@ -11,6 +11,7 @@ org.books.validator.CreditCardNumberValidator.INVALID_NUMBER=Nummer ung\u00fclti
 org.books.validator.CreditCardNumberValidator.NOT_EXISTING_NUMBER=Nummer existiert nicht
 org.books.validator.CreditCardNumberValidator.VALIDATOR_NON_MATCHING_TYPE_AND_NUMBER=Kartentyp und Kartennummer passen nicht zusammen
 org.books.validator.CreditCardExpirationDateValidator.VALIDATOR_INVALID_EXPIRATION_DATE=Ung\u00fcltiges Verfalldatum
+org.books.validator.PasswordValidator.VALIDATOR_PASSWORDS_NOT_EQUAL=Passw\u00f6rter stimmen nicht \u00fcberein
 
 # Catalog
 org.books.infoNoBookFound=Kein passendes Buch gefunden
@@ -22,3 +23,8 @@ org.books.errorInvalidCredentials=Die Email-Adresse oder das Passwort ist ung\u0
 org.books.paymentFailedError=Zahlung nicht m\u00f6glich
 org.books.orderCancelError=Bestellung kann nicht mehr abgebrochen werden
 org.books.infoNoOrderFound=Keine Bestellungen gefunden
+
+# Change Password
+org.books.passwordOldWrong=Altes Passwort falsch
+org.books.passwordNewNotEqual=Altes und neues Passwort nicht identisch
+org.books.passwordCouldNotSave=Konnte neues Password nicht speichern
