@@ -11,6 +11,7 @@ org.books.validator.CreditCardNumberValidator.INVALID_NUMBER=Number invalid
 org.books.validator.CreditCardNumberValidator.NOT_EXISTING_NUMBER=Number does not exist
 org.books.validator.CreditCardNumberValidator.VALIDATOR_NON_MATCHING_TYPE_AND_NUMBER=Card type and card number are not matching
 org.books.validator.CreditCardExpirationDateValidator.VALIDATOR_INVALID_EXPIRATION_DATE=Invalid expiration date
+org.books.validator.PasswordValidator.VALIDATOR_PASSWORDS_NOT_EQUAL=Passwords not equal
 
 # Login
 org.books.errorInvalidCredentials=The email address or password is invalid
@@ -19,3 +20,8 @@ org.books.errorInvalidCredentials=The email address or password is invalid
 org.books.paymentFailedError=Payment failed
 org.books.orderCancelError=Order can't get canceled
 org.books.infoNoOrderFound=No order found
+
+# Change Password
+org.books.passwordOldWrong=Old password is wrong
+org.books.passwordNewNotEqual=Old and new password not identical
+org.books.passwordCouldNotSave=Could not save new password
