@@ -68,6 +68,12 @@ accountOrder=Bestellung
 accountYear=Jahr
 accountInvalidYeahr=Das Jahr ist ung\u00fcltig
 
+# Change Password
+changePasswordPageTitle=Passwort \u00e4ndern
+btnChangePassword=Passwort \u00e4ndern
+newPassword=Neues Passwort
+oldPassword=Altes Passwort
+
 # Customer Details
 customerDetailsPageTitle=Kundenangaben
 
