@@ -68,6 +68,12 @@ accountOrder=Order
 accountYear=Year
 accountInvalidYeahr=Invalid Year
 
+# Change Password
+changePasswordPageTitle=Change password
+btnChangePassword=Change password
+newPassword=New password
+oldPassword=Old password
+
 # Customer Details
 customerDetailsPageTitle=Client information
 
