@@ -45,6 +45,8 @@
             </h:panelGrid>
 	    <p/>
 	    <h:commandButton value="#{texts.btnChange}" action="#{navigationBean.goToCustomerDetails()}" />
+	    <h:outputText value=" " />
+	    <h:commandButton value="#{texts.btnChangePassword}" action="#{navigationBean.goToChangePassword()}" />
         </h:form>
 	<p/>
 	<h:form id="bestellungForm">
