@@ -1,0 +1,23 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<ui:composition template="template.xhtml" 
+                xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+		xmlns:bTag="http://www.bfh.ch/bookstore/taglib"
+		xmlns:comp="http://xmlns.jcp.org/jsf/composite/components">
+    <ui:define name="header">
+        <ui:include src="header.xhtml">
+            <ui:param name="pageTitle" value="#{texts.changePasswordPageTitle}" />
+        </ui:include>
+    </ui:define>
+    <ui:define name="content">
+	<p/>
+        <h:form id="changePasswordForm">
+	    <comp:requiredField secret="true" label="#{texts.oldPassword}" fieldId="lastName" value="#{passwordBean.oldPassword}" styleName="addressLabelFixedWidth" />
+	    <comp:password label="#{texts.newPassword}" fieldId="password" value="#{passwordBean.newPassword}" value2="#{passwordBean.newPassword2}" styleName="addressLabelFixedWidth" />
+	    <h:commandButton value="#{texts.btnChange}" action="#{passwordBean.change()}" />
+	    <h:messages showSummary="true" showDetail="false" errorClass="error" />
+        </h:form>
+    </ui:define>
+</ui:composition>
