@@ -4,7 +4,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
-		xmlns:card="http://www.bfh.ch/bookstore/taglib"
+		xmlns:bTag="http://www.bfh.ch/bookstore/taglib"
 		xmlns:comp="http://xmlns.jcp.org/jsf/composite/components">
     <ui:define name="header">
         <ui:include src="header.xhtml">
@@ -17,7 +17,7 @@
 	    <comp:requiredField label="#{texts.firstname}" fieldId="firstName" value="#{customerBean.customer.firstName}" styleName="addressLabelFixedWidth" />
 	    <comp:requiredField label="#{texts.lastname}" fieldId="lastName" value="#{customerBean.customer.lastName}" styleName="addressLabelFixedWidth" />
 	    <comp:requiredField label="#{texts.email}" fieldId="email" value="#{customerBean.customer.email}" styleName="addressLabelFixedWidth" />
-	    <comp:requiredField secret="true" label="#{texts.password}" fieldId="password" value="#{customerBean.customer.password}" styleName="addressLabelFixedWidth" />
+	    <comp:password label="#{texts.password}" fieldId="password" value="#{customerBean.customer.password}" styleName="addressLabelFixedWidth" />
 
 	    <p/>
 	    <h:outputText value="#{texts.address}" styleClass="subheading"/>
@@ -49,7 +49,7 @@
                 <h:outputText value="#{texts.cardNumber}" styleClass="addressLabelFixedWidth" />
 		<h:panelGroup>
 		    <h:inputText id="creditCardNumber" value="#{customerBean.customer.creditCard.number}" size="20">
-			<card:validateCreditCardNumber cardTypeId="cardType" />
+			<bTag:validateCreditCardNumber cardTypeId="cardType" />
 			<f:converter converterId="org.books.converter.CreditCardNumberConverter" />
 		    </h:inputText>
 		    <h:message for="creditCardNumber" errorClass="error" showSummary="true" showDetail="false" />
@@ -63,7 +63,7 @@
 		    /
 		    <h:inputText id="expirationYear" value="#{customerBean.customer.creditCard.expirationYear}" size="1" maxlength="2" required="true" >
 			<f:converter converterId="org.books.converter.CreditCardYearConverter" />
-			<card:validateCreditCardExpirationDate cardExpirationMonthId="expirationMonth" />
+			<bTag:validateCreditCardExpirationDate cardExpirationMonthId="expirationMonth" />
 		    </h:inputText>
 		    <h:message for="expirationMonth" errorClass="error" showSummary="true" showDetail="false" />
 		    <h:message for="expirationYear" errorClass="error" showSummary="true" showDetail="false" />
