@@ -1,0 +1,35 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:composite="http://xmlns.jcp.org/jsf/composite"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:bTag="http://www.bfh.ch/bookstore/taglib">
+    <composite:interface>
+	<composite:attribute name="label" required="true" />
+	<composite:attribute name="fieldId" required="true" />
+	<composite:attribute name="value" required="true" />
+	<composite:attribute name="value2" />
+	<composite:attribute name="size" default="30" />
+	<composite:attribute name="styleName" />
+    </composite:interface>
+    <composite:implementation>
+	<h:panelGrid columns="2">
+	    <h:outputText value="#{cc.attrs.label}" styleClass="addressLabelFixedWidth" />
+	    <h:panelGroup>
+		<h:inputSecret id="#{cc.attrs.fieldId}" value="#{cc.attrs.value}" size="30" required="true" >
+		    <f:ajax event="blur" execute="#{cc.attrs.fieldId}2" render="msgPassword2" />
+		</h:inputSecret>
+		<h:message for="#{cc.attrs.fieldId}" errorClass="error" showSummary="true" showDetail="false" />
+	    </h:panelGroup>
+
+	    <h:outputText value="#{cc.attrs.label} 2" styleClass="addressLabelFixedWidth" />
+	    <h:panelGroup>
+		<h:inputSecret id="#{cc.attrs.fieldId}2" value="#{cc.attrs.value2}" size="30" required="true">
+		    <f:ajax event="blur" execute="#{cc.attrs.fieldId}" render="msgPassword2" />
+		    <bTag:validatePassword passwordFieldId="#{cc.attrs.fieldId}" />
+		</h:inputSecret>
+		<h:message id="msgPassword2" for="#{cc.attrs.fieldId}2" errorClass="error" showSummary="true" showDetail="false" />
+	    </h:panelGroup>
+	</h:panelGrid>
+    </composite:implementation>
+</html>
