@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:cc="http://xmlns.jcp.org/jsp/jstl/core">
     <composite:interface>
-	<composite:attribute name="label" />
+	<composite:attribute name="label" required="true" />
 	<composite:attribute name="fieldId" required="true" />
 	<composite:attribute name="value" required="true" />
 	<composite:attribute name="size" default="30" />
