@@ -73,5 +73,5 @@ p {
 
 .addressLabelFixedWidth {
     display: block;
-    width: 100px;
+    width: 110px;
 }
